--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="93dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="70dp"
+        android:background="?attr/colorControlHighlight"
         android:editable="false"
         android:fontFamily="@font/alike"
         android:text="@string/welcome_to_troubles_get_away"
