--- a/app/src/main/res/layout/activity_comuni.xml
+++ b/app/src/main/res/layout/activity_comuni.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.Comuni">
+    tools:context=".admin.Comuni">
 
     <Button
         android:id="@+id/btninsert"
