--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.AdminMainActivity">
+    tools:context=".admin.AdminMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
