--- a/app/src/main/res/layout/activity_gest_guasti.xml
+++ b/app/src/main/res/layout/activity_gest_guasti.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Comune.gestGuasti">
+    tools:context=".comune.gestGuasti">
 
 </android.support.constraint.ConstraintLayout>
