--- a/app/src/main/res/layout/activity_guasti_ut.xml
+++ b/app/src/main/res/layout/activity_guasti_ut.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Utente.GuastiUt">
+    tools:context=".utente.GuastiUt">
 
 </android.support.constraint.ConstraintLayout>
