--- a/app/src/main/res/layout/activity_new_comune.xml
+++ b/app/src/main/res/layout/activity_new_comune.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.newComune">
+    tools:context=".admin.newComune">
 
     <Button
         android:id="@+id/btnInsert"
