--- a/app/src/main/res/layout/activity_profilo_ut.xml
+++ b/app/src/main/res/layout/activity_profilo_ut.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Utente.ProfiloUt">
+    tools:context=".utente.ProfiloUt">
 
 </android.support.constraint.ConstraintLayout>
