--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,6 +87,7 @@
 
         <EditText
             android:id="@+id/stateEditText"
+            android:hint="@string/state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -94,7 +95,6 @@
             android:ems="10"
             android:fontFamily="@font/alike"
             android:inputType="textPersonName"
-            android:text="Comune"
             android:textColor="#383737"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/emailEditText"
