--- a/app/src/main/res/layout/activity_segnala.xml
+++ b/app/src/main/res/layout/activity_segnala.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Utente.Segnala">
+    tools:context=".utente.Segnala">
 
     <TextView
         android:id="@+id/textInd"
