--- a/app/src/main/res/layout/activity_utente_main.xml
+++ b/app/src/main/res/layout/activity_utente_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Utente.UtenteMainActivity">
+    tools:context=".utente.UtenteMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
