--- a/app/src/main/res/layout/activity_utenti.xml
+++ b/app/src/main/res/layout/activity_utenti.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.Utenti">
+    tools:context=".admin.Utenti">
 
     <TextView
         android:id="@+id/textUtenti"
