--- a/app/src/main/res/layout/content_comune_main.xml
+++ b/app/src/main/res/layout/content_comune_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Comune.ComuneMainActivity"
+    tools:context=".comune.ComuneMainActivity"
     tools:showIn="@layout/activity_comune_main">
 
     <Button
