--- a/app/src/main/res/layout/content_utente_main.xml
+++ b/app/src/main/res/layout/content_utente_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Utente.UtenteMainActivity"
+    tools:context=".utente.UtenteMainActivity"
     tools:showIn="@layout/activity_utente_main">
 
     <Button
