Fix inserimento comune

--- a/app/src/main/res/layout/activity_new_comune.xml
+++ b/app/src/main/res/layout/activity_new_comune.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="@+id/editNome" />
 
     <EditText
-        android:id="@+id/editPswrd"
+        android:id="@+id/passwordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -29,12 +29,12 @@
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPassword"
-        android:text="Password"
+        android:hint="@string/password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editUsrnm"
+        android:id="@+id/usernameEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -42,12 +42,12 @@
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
-        android:text="@string/username"
+        android:hint="@string/username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editEmail"
+        android:id="@+id/emailEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -55,7 +55,7 @@
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
-        android:text="Indirizzo e-mail"
+        android:hint="@string/email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnInsert" />
 
@@ -68,9 +68,9 @@
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
-        android:text="Telefono"
+        android:hint="@string/phone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <EditText
         android:id="@+id/editNome"
@@ -81,8 +81,8 @@
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
-        android:text="Nome"
+        android:hint="@string/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPswrd" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
 </android.support.constraint.ConstraintLayout>
