--- a/app/src/main/res/layout/content_admin_main.xml
+++ b/app/src/main/res/layout/content_admin_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sfondoadmin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".admin.AdminMainActivity"
     tools:showIn="@layout/activity_admin_main">
@@ -13,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="77dp"
-        android:backgroundTint="@color/colorButton"
+        android:backgroundTint="@color/colorButton0"
         android:fontFamily="@font/alike"
-        android:text="Gestione Utenti"
+        android:text="@string/user_button"
         app:layout_constraintBottom_toTopOf="@+id/btngestcomuni"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -26,9 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="67dp"
-        android:backgroundTint="@color/colorButton"
+        android:backgroundTint="@color/colorButton0"
         android:fontFamily="@font/alike"
-        android:text="Gestione Comuni"
+        android:text="@string/state_button"
         app:layout_constraintBottom_toTopOf="@+id/btnguasti"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.513"
@@ -38,9 +39,9 @@
         android:id="@+id/btnguasti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorButton"
+        android:backgroundTint="@color/colorButton0"
         android:fontFamily="@font/alike"
-        android:text="Lista Guasti"
+        android:text="@string/list_breakdowns"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,11 +52,11 @@
         android:id="@+id/btnannulla"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="136dp"
         android:backgroundTint="#00FFCCCB"
         android:fontFamily="@font/alike"
-        android:text="Esci"
+        android:text="@string/exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
