--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -20,6 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_admin_main" />
+    <include
+        layout="@layout/content_admin_main"
+        android:background="@drawable/sfondoadmin" />
 
 </android.support.design.widget.CoordinatorLayout>
