--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,87 +13,87 @@
 
         <EditText
             android:id="@+id/usernameEditText"
-            android:hint="@string/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="32dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/username"
             android:inputType="none|textPersonName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/passwordEditText"
-            android:hint="@string/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/password"
             android:inputType="none|textPassword"
             app:layout_constraintStart_toStartOf="@+id/usernameEditText"
             app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
 
         <EditText
             android:id="@+id/emailEditText"
-            android:hint="@string/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/email"
             android:inputType="none|textEmailAddress"
             app:layout_constraintStart_toStartOf="@+id/phoneEditText"
             app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
 
         <EditText
             android:id="@+id/nameEditText"
-            android:hint="@string/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/name"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText" />
 
         <EditText
             android:id="@+id/surnameEditText"
-            android:hint="@string/surname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="33dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/surname"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="@+id/nameEditText"
             app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
 
         <EditText
             android:id="@+id/phoneEditText"
-            android:hint="@string/phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="27dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/phone"
             android:inputType="none|number"
             app:layout_constraintStart_toStartOf="@+id/surnameEditText"
             app:layout_constraintTop_toBottomOf="@+id/surnameEditText" />
 
         <EditText
             android:id="@+id/stateEditText"
-            android:hint="@string/state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="142dp"
             android:ems="10"
             android:fontFamily="@font/alike"
+            android:hint="@string/state"
             android:inputType="textPersonName"
             android:textColor="#383737"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="@color/colorButton"
+            android:background="@color/colorButton"
             android:fontFamily="@font/alike"
             android:text="@string/register_button_label"
             app:layout_constraintBottom_toBottomOf="parent"
