--- a/app/src/main/res/layout/activity_guasti.xml
+++ b/app/src/main/res/layout/activity_guasti.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".utente.Guasti">
 
+    <ListView
+        android:id="@+id/lguasti"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
